Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Fixed
-
Affects Version/s: Qt Creator 4.2.0, Qt Creator 4.6.1
-
Fix Version/s: Qt Creator 4.7.0-beta1
-
Component/s: Boot2Qt Support , QNX Support
-
Labels:None
-
Commits:087af4187177c8f06fa91a8640cd0b4e4bca05f4
Description
When creating a new Qt Widgets Application or Qt Console Application project, deployment rules are missing, resulting in projects not deploying properly to e.g. Boot2Qt devices.
For now this can be fixed by adding
# Default rules for deployment. qnx: target.path = /tmp/$${TARGET}/bin else: unix:!android: target.path = /opt/$${TARGET}/bin !isEmpty(target.path): INSTALLS += target
to the project file.
Attachments
Issue Links
- relates to
-
QTCREATORBUG-21227 Qt Creator has no concept of device specific deployment paths
-
- Closed
-