Wizards: Add deployment rules to Widgets and Console applications

Otherwise they can't be deployed to Boot2Qt (and other) devices. Quick
application wizards already have these deployment rules.

Task-number: QTCREATORBUG-20358
Change-Id: I5a19ada3f6a382e8553750769478c398a50352c9
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>
Reviewed-by: Kari Hormi <kari.hormi@qt.io>