share/qtcreator/templates/wizards/projects/consoleapp/file.pro
@@ -16,3 +16,8 @@ DEFINES += QT_DEPRECATED_WARNINGS
 
 SOURCES += \\
         %{CppFileName}
+
+# Default rules for deployment.
+qnx: target.path = /tmp/$${TARGET}/bin
+else: unix:!android: target.path = /opt/$${TARGET}/bin
+!isEmpty(target.path): INSTALLS += target
